feat: fix get(0) calls